--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=123456
 
 server.servlet.session.persistent=true
 server.servlet.session.timeout=30m
+
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db
+#spring.flyway.baseline-on-migrate=true
