--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,14 @@ server.port=8090
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myfirstpetstore
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=12345
 
 server.servlet.session.persistent=true
 server.servlet.session.timeout=30m
+
+
+debug=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
